--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
                 </div>
                 <label class="formLabel" for="task-input">Select your task:</label> <br>
                     <input type="text" name="task-input" id="task-input" value="">
-                    <!-- <input type="text" name="Thing" value="" /> -->
                 <br>
                 <section id="btnContainer">
                     <button type="button" id="submitBtn" onclick="startFunctions()";>Add Pomodoro</button>
-                    <!-- <button type="button" id="eraseBtn"><img id="btnImg" src="./imgs/trashbin_vector.png" alt="erase_button"></button> -->
                 </section>
 
             </form>
@@ -51,12 +49,7 @@
         <article id="taskContainer">
             <p class="fancy" id="taskText">Tasks</p>
             <div id="minorContainer">
-                    <section id="tasks">
-                        <!-- <label class="container" for="checkbox1" id="label1">Lorem ipsum dolor sit amet.
-                            <input type="checkbox" id="checkbox1" name="checkbox1" disabled>
-                            <span class="checkmark"></span>
-                        </label> -->
-                    </section>
+                    <section id="tasks"></section>
             </div>
         </article>
     </main>
@@ -65,11 +58,10 @@
         <div id="credits">
             <p id="coded">Coded by Yan:</p>
             <div id="social">
-                <a href="https://twitter.com/iggyrururu" target="_blank"><img src="/imgs/twitter_vector.png" alt="twitter"></a>
-                <a href="https://github.com/Grygoryn" target="_blank"><img src="/imgs/github_vector.png" alt="github"></a> 
+                <a href="https://twitter.com/yangyrru" target="_blank"><img src="/imgs/twitter_vector.png" alt="twitter"></a>
+                <a href="https://github.com/Gryygo" target="_blank"><img src="/imgs/github_vector.png" alt="github"></a> 
                 <a href="https://www.instagram.com/yan.gabriel26/" target="_blank"><img src="/imgs/instagram_vector.png" alt="instagram"></a>
                 <a href="https://www.linkedin.com/in/yan-gabriel-leitão-de-lima-24b080229/" target="_blank"><img src="/imgs/linkedin_vector.png" alt="linkedin"></a>
-                
             </div>
         </div>
     </footer>
