--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </div>
     </footer>
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/script.js"></script>
 </body>
 </html>
